@@ -38,21 +38,6 @@ done
 ])
 
 ## ------------------------------------------------------------------------
-## Internal macros to find if we don't need extra flags to find these
-## This is not yet used
-## ------------------------------------------------------------------------
-##
-AC_DEFUN(AC_PATH_QT_DIRECT,
-[if test "$ac_qt_includes" = NO; then
-AC_TRY_CPP([#include <qtstream.h>],
-[
-ac_qt_includes=
-],[
-])
-fi
-])
-
-## ------------------------------------------------------------------------
 ## Find the meta object compiler in the PATH, in $QTDIR/bin, and some
 ## more usual places
 ## ------------------------------------------------------------------------
@@ -237,6 +222,58 @@ AC_SUBST(X_INCLUDES)
 AC_SUBST(X_LDFLAGS)
 all_includes=$X_INCLUDES
 ])
+
+AC_DEFUN(KDE_PRINT_QT_PROGRAM,
+[
+AC_LANG_CPLUSPLUS
+cat > conftest.$ac_ext <<EOF
+#include "confdefs.h"
+#include <qmovie.h>
+int main() {
+  QMovie m;
+  m.setSpeed(20);
+  return 0;
+}
+EOF
+])
+
+AC_DEFUN(KDE_CHECK_QT_DIRECT,
+[
+AC_MSG_CHECKING([if Qt compiles without flags])
+AC_CACHE_VAL(kde_cv_qt_direct,
+[
+ac_cxxflags_safe=$CXXFLAGS
+ac_ldflags_safe=$LDFLAGS
+ac_libs_safe=$LIBS
+
+CXXFLAGS="$CXXFLAGS -I$qt_includes"
+LDFLAGS="$X_LDFLAGS"
+LIBS="-lqt -lXext -lX11 $LIBSOCKET"
+
+KDE_PRINT_QT_PROGRAM
+
+if AC_TRY_EVAL(ac_link) && test -s conftest; then
+  kde_cv_qt_direct="yes"
+else
+  kde_cv_qt_direct="no"
+  echo "configure: failed program was:" >&AC_FD_CC
+  cat conftest.$ac_ext >&AC_FD_CC
+fi
+rm -f conftest*
+CXXFLAGS=$ac_cxxflags_safe
+LDFLAGS=$ac_ldflags_safe
+LIBS=$ac_libs_safe
+])
+
+if test "$kde_cv_qt_direct" = "yes"; then
+  AC_MSG_RESULT(yes)
+  $1
+else
+  AC_MSG_RESULT(no)
+  $2
+fi
+])
+
 ## ------------------------------------------------------------------------
 ## Try to find the QT headers and libraries.
 ## $(QT_LDFLAGS) will be -Lqtliblocation (if needed)
@@ -271,15 +308,14 @@ AC_ARG_WITH(qt-libraries,
 if test "$ac_qt_includes" = NO || test "$ac_qt_libraries" = NO; then
 
 AC_CACHE_VAL(ac_cv_have_qt,
-AC_PATH_QT_DIRECT
 [#try to guess qt locations
 
-qt_incdirs="/usr/lib/qt/include /usr/local/qt/include /usr/include/qt /usr/include /usr/X11R6/include/X11/qt $x_includes $QTINC"
+qt_incdirs="$ac_qt_includes /usr/lib/qt/include /usr/local/qt/include /usr/include/qt /usr/include /usr/X11R6/include/X11/qt $x_includes $QTINC"
 test -n "$QTDIR" && qt_incdirs="$QTDIR/include $QTDIR $qt_incdirs"
 AC_FIND_FILE(qmovie.h, $qt_incdirs, qt_incdir)
 ac_qt_includes=$qt_incdir
 
-qt_libdirs="/usr/lib/qt/lib /usr/local/qt/lib /usr/lib/qt /usr/lib $x_libraries $QTLIB"
+qt_libdirs="$ac_qt_libraries /usr/lib/qt/lib /usr/local/qt/lib /usr/lib/qt /usr/lib $x_libraries $QTLIB"
 test -n "$QTDIR" && qt_libdirs="$QTDIR/lib $QTDIR $qt_libdirs"
 AC_FIND_FILE(libqt.so libqt.so.1.30 libqt.so.1.31 libqt.so.1 libqt.a libqt.sl, $qt_libdirs, qt_libdir)
 ac_qt_libraries=$qt_libdir
@@ -287,20 +323,12 @@ ac_qt_libraries=$qt_libdir
 ac_cxxflags_safe=$CXXFLAGS
 ac_ldflags_safe=$LDFLAGS
 ac_libs_safe=$LIBS
+
 CXXFLAGS="$CXXFLAGS -I$qt_incdir"
 LDFLAGS="-L$qt_libdir $X_LDFLAGS"
 LIBS="-lqt -lXext -lX11 $LIBSOCKET"
 
-AC_LANG_CPLUSPLUS
-cat > conftest.$ac_ext <<EOF
-#include "confdefs.h"
-#include <qmovie.h>
-int main() {
-  QMovie m;
-  m.setSpeed(20);
-  return 0;
-};
-EOF
+KDE_PRINT_QT_PROGRAM
 
 if AC_TRY_EVAL(ac_link) && test -s conftest; then
   rm -f conftest*
@@ -348,17 +376,20 @@ else
   qt_libraries=$ac_qt_libraries
   qt_includes=$ac_qt_includes
 fi
+
+KDE_CHECK_QT_DIRECT(qt_libraries= ,[])
+
 AC_SUBST(qt_libraries)
 AC_SUBST(qt_includes)
 
-if test "$qt_includes" = "$x_includes"; then
+if test "$qt_includes" = "$x_includes" || test -z "$qt_includes"; then
  QT_INCLUDES="";
 else
  QT_INCLUDES="-I$qt_includes"
  all_includes="$QT_INCLUDES $all_includes"
 fi
 
-if test "$qt_libraries" = "$x_libraries"; then
+if test "$qt_libraries" = "$x_libraries" || test -z "$qt_libraries"; then
  QT_LDFLAGS=""
 else
  QT_LDFLAGS="-L$qt_libraries"
